Fix alignment of input query

--- a/src/styles.css
+++ b/src/styles.css
@@ -190,3 +190,7 @@ table {
 	border-collapse: separate;
 	border-spacing: 0;
 }
+
+.field.is-grouped {
+	margin-left: 1rem;
+}
